5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1593_1802.log
== TEST (2019-04-01 23:23:33) 
-- CODE:
from math import *
vidai = float(input("Ponto de vida: "))
d1 = float(input("Valor Sorteado: "))
d2 = float(input("Valor 2 sorteado: "))
dano = int(((5 * d1) ** 0.5 + pi ** d2/3))
restante = vidai - dano
print(restante)
-- OUTPUT:
-122.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:23:50) 
-- CODE:
from math import *
vidai = float(input("Ponto de vida: "))
d1 = float(input("Valor Sorteado: "))
d2 = float(input("Valor 2 sorteado: "))
dano = int(((5 * d1) ** 0.5 + pi ** d2/3))
restante = vidai - dano
print(restante)
-- OUTPUT:
-122.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:23:53) 
-- CODE:
from math import *
vidai = float(input("Ponto de vida: "))
d1 = float(input("Valor Sorteado: "))
d2 = float(input("Valor 2 sorteado: "))
dano = int(((5 * d1) ** 0.5 + pi ** d2/3))
restante = vidai - dano
print(restante)
-- EXECUTION TIME:
0.153895
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:24:48) 
-- CODE:
from math import *
vidai = float(input("Ponto de vida: "))
d1 = float(input("Valor Sorteado: "))
d2 = float(input("Valor 2 sorteado: "))
dano = (5 * d1) ** 0.5 + pi ** d2/3
restante = vidai - dano
print(int(restante)
-- ERROR:
File "XXXX", line 8
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:24:52) 
-- CODE:
from math import *
vidai = float(input("Ponto de vida: "))
d1 = float(input("Valor Sorteado: "))
d2 = float(input("Valor 2 sorteado: "))
dano = (5 * d1) ** 0.5 + pi ** d2/3
restante = vidai - dano
print(int(restante))
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:28:42) 
-- CODE:
from math import *
vidai = float(input("Ponto de vida: "))
d1 = float(input("Valor Sorteado: "))
d2 = float(input("Valor 2 sorteado: "))
dano = sqrt.(5 * d1) + pi ** d2/3
restante = vidai - dano
print(int(restante))
-- ERROR:
File "XXXX", line 5
    dano = sqrt.(5 * d1) + pi ** d2/3
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:28:48) 
-- CODE:
from math import *
vidai = float(input("Ponto de vida: "))
d1 = float(input("Valor Sorteado: "))
d2 = float(input("Valor 2 sorteado: "))
dano = sqrt(5 * d1) + pi ** d2/3
restante = vidai - dano
print(int(restante))
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:29:02) 
-- CODE:
from math import *
vidai = float(input("Ponto de vida: "))
d1 = float(input("Valor Sorteado: "))
d2 = float(input("Valor 2 sorteado: "))
dano = sqrt(5 * d1) + pi ** d2/3
restante = vidai - dano
print(int(restante))
-- EXECUTION TIME:
0.204108
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:30:05) 
-- CODE:
from math import *
vidai = float(input("Ponto de vida: "))
d1 = float(input("Valor Sorteado: "))
d2 = float(input("Valor 2 sorteado: "))
dano = sqrt(5 * d1) + pi ** d2/3
print(int(dano))
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:30:14) 
-- CODE:
from math import *
vidai = float(input("Ponto de vida: "))
d1 = float(input("Valor Sorteado: "))
d2 = float(input("Valor 2 sorteado: "))
dano = sqrt(5 * d1) + pi ** d2/3
print(int(dano))
-- EXECUTION TIME:
0.195425
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
322
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
325
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:31:20) 
-- CODE:
from math import *
vidai = int(input("Ponto de vida: "))
d1 = int(input("Valor Sorteado: "))
d2 = int(input("Valor 2 sorteado: "))
dano = sqrt(5 * d1) + pi ** d2/3
restante = vidai - int(dano)
print(restante)

-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:33:07) 
-- CODE:
from math import *
vidai = int(input("Ponto de vida: "))
d1 = int(input("Valor 1 Sorteado: "))
d2 = int(input("Valor 2 sorteado: "))
dano = sqrt(5 * d1) + pi ** d2/3
int(restante) = vidai - dano
print(restante)

-- ERROR:
File "XXXX", line 6
    int(restante) = vidai - dano
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:33:21) 
-- CODE:
from math import *
vidai = int(input("Ponto de vida: "))
d1 = int(input("Valor 1 Sorteado: "))
d2 = int(input("Valor 2 sorteado: "))
dano = sqrt(5 * d1) + pi ** d2/3
restante = vidai - dano
print(int(restante))

-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:34:00) 
-- CODE:
from math import *
vidai = int(input("Ponto de vida: "))
d1 = int(input("Valor 1 Sorteado: "))
d2 = int(input("Valor 2 sorteado: "))
dano = sqrt(5 * d1) + pi ** d2/3
restante = vidai - dano
print(float(restante))

-- OUTPUT:
-122.69913250260117
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:34:10) 
-- CODE:
from math import *
vidai = int(input("Ponto de vida: "))
d1 = int(input("Valor 1 Sorteado: "))
d2 = int(input("Valor 2 sorteado: "))
dano = sqrt(5 * d1) + pi ** d2/3
restante = vidai - dano
print(float(restante))

-- EXECUTION TIME:
0.137631
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122.69913250260117
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25.94029010015305
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496.7167344713036
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:21:24) 
-- CODE:
from math import *
vidai = int(input("Ponto de vida: "))
d1 = int(input("Valor 1 Sorteado: "))
d2 = int(input("Valor 2 sorteado: "))
dano = sqrt(5 * d1) + pi ** d2/3
restante = vidai - dano
print(int(restante))

-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:41:38) 
-- CODE:
from math import *
vidai = int(input("Ponto de vida: "))
d1 = int(input("Valor 1 Sorteado: "))
d2 = int(input("Valor 2 sorteado: "))
dano = (sqrt(5 * d1) + pi ** d2/3)
restante = vidai - dano
print(int(restante))

-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:45:06) 
-- CODE:
from math import *
vidai = int(input("Ponto de vida: "))
d1 = int(input("Valor 1 Sorteado: "))
d2 = int(input("Valor 2 sorteado: "))
dano = [sqrt(5 * d1) + pi ** d2/3]
restante = vidai - dano
print(int(restante))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    restante = vidai - dano
TypeError: unsupported operand type(s) for -: 'int' and 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:45:47) 
-- CODE:
from math import *
vidai = int(input("Ponto de vida: "))
d1 = int(input("Valor 1 Sorteado: "))
d2 = int(input("Valor 2 sorteado: "))
dano = sqrt(5 * d1) + (pi) ** d2/3
restante = vidai - dano
print(int(restante))

-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:46:30) 
-- CODE:
from math import *
vidai = int(input("Ponto de vida: "))
d1 = int(input("Valor 1 Sorteado: "))
d2 = int(input("Valor 2 sorteado: "))
dano = sqrt(5 * d1) + (pi) ** d2/3
restante = vidai - dano
print(int(restante))

-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:08:58) 
-- CODE:
from math import *
vidai = int(input("Ponto de vida: "))
d1 = int(input("Valor 1 Sorteado: "))
d2 = int(input("Valor 2 sorteado: "))
dano = sqrt(5 * d1) + (pi) ** d2/3
restante = vidai - int(dano)
print(int(restante))

-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:09:20) 
-- CODE:
from math import *
vidai = int(input("Ponto de vida: "))
d1 = int(input("Valor 1 Sorteado: "))
d2 = int(input("Valor 2 sorteado: "))
dano = sqrt(5 * d1) + (pi) ** d2/3
restante = vidai - int(dano)
print(restante)

-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:12:11) 
-- CODE:
from math import *
vidai = float(input("Ponto de vida: "))
d1 = int(input("Valor 1 Sorteado: "))
d2 = int(input("Valor 2 sorteado: "))
dano = sqrt(5 * d1) + (pi) ** d2/3
restante = int(dano) - vidai
print(restante)

-- OUTPUT:
122.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:13:47) 
-- CODE:
from math import *
vidai = float(input("Ponto de vida: "))
d1 = int(input("Valor 1 Sorteado: "))
d2 = int(input("Valor 2 sorteado: "))
dano = int(sqrt(5 * d1) + (pi) ** d2/3)
print(dano)

-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:14:13) 
-- CODE:
from math import *
vidai = float(input("Ponto de vida: "))
d1 = int(input("Valor 1 Sorteado: "))
d2 = int(input("Valor 2 sorteado: "))
dano = int(sqrt(5 * d1) + (pi) ** d2/3)
print(dano)

-- EXECUTION TIME:
0.132501
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
322
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
325
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:21:39) 
-- CODE:
from math import *
vidainicial = int(input("Vida inicial: "))
d1 = int(input("Valor lancamento 1: "))
d2 = int(input("Valor lancamento 2: "))
dano = (sqrt(5 * d1) + pi ** (d2/3))
vidarestante = int(vidainicial - dano)
print(int(vidarestante))

-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:21:51) 
-- CODE:
from math import *
vidainicial = int(input("Vida inicial: "))
d1 = int(input("Valor lancamento 1: "))
d2 = int(input("Valor lancamento 2: "))
dano = (sqrt(5 * d1) + pi ** (d2/3))
vidarestante = int(vidainicial - dano)
print(int(vidarestante))

-- EXECUTION TIME:
0.192369
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:22:07) 
-- CODE:
from math import *
vidainicial = int(input("Vida inicial: "))
d1 = int(input("Valor lancamento 1: "))
d2 = int(input("Valor lancamento 2: "))
dano = (sqrt(5 * d1) + pi ** (d2/3))
vidarestante = vidainicial - dano
print(int(vidarestante))

-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 13:41:47) 
-- CODE:
from math import *
vidainicial = int(input("Vida inicial: "))
d1 = int(input("Valor lancamento 1: "))
d2 = int(input("Valor lancamento 2: "))
dano = (sqrt(5 * d1) + pi ** (d2/3))
vidarestante = vidainicial - int(dano)
print(int(vidarestante))

-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 13:41:57) 
-- CODE:
from math import *
vidainicial = int(input("Vida inicial: "))
d1 = int(input("Valor lancamento 1: "))
d2 = int(input("Valor lancamento 2: "))
dano = (sqrt(5 * d1) + pi ** (d2/3))
vidarestante = vidainicial - int(dano)
print(int(vidarestante))

-- EXECUTION TIME:
0.187997
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
